fixed display on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -38,14 +38,26 @@
 #img-container {
     overflow: hidden;
     background-image: url(images/yelm.jpg);
+    background-repeat: no-repeat;
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
     object-fit: cover;
+    background-size: cover;
     background-position: center;
     z-index: -100;
+}
+
+#content-gradient {
+    background-color: #DDFFFF;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    mix-blend-mode: color;
 }
 
 #navbar {
@@ -107,41 +119,28 @@
     width: 100%;
 }
 
-@media (max-width:670px) {
+#menu-icon {
+    display: none;
+}
 
-    #main-header {
-        display: inline-block;
-        height: 128px;
+@media screen and (max-width:670px) {
+    #main-footer {
+        display: none;
     }
-
-    #main-header h1{
-        text-align: left;
-        height: 64px;
-    }
-
-    #nav-container {
-        background-color: #333333;
-        height: 50%;
-        display: flex;
-    }
-
-    #navbar {
-        height: 100%;
-        left: 0;
-        align-content: center;
-        display: inline-block;
-    }
-
     #navbar ul {
-        margin-left: 20px;
+        display: none;
     }
-
     #contact-btn {
-        display: inline-block;
-        position: relative;
+        display: none;
+    }
+    #menu-icon {
+        display: inline;
         align-content: center;
-        margin: auto;
+        height: 40px;
+        padding: 5px;
         margin-right: 30px;
-        right: 0;
+        border: solid 1px black;
+        filter: invert();
+        border-radius: 5px;
     }
 }
